--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +27,7 @@
             from {
                 opacity: 0;
             }
+
             to {
                 opacity: 1;
             }
@@ -51,9 +53,12 @@
         }
 
         @keyframes float {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translate(-50%, -50%) translateY(-20px);
             }
+
             50% {
                 transform: translate(-50%, -50%) translateY(20px);
             }
@@ -117,6 +122,7 @@
                 opacity: 0.6;
                 transform: scale(1);
             }
+
             to {
                 opacity: 1;
                 transform: scale(1.2);
@@ -124,11 +130,12 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>404</h1>
         <p>Oops! Looks like you’re lost in space.</p>
-        <img src="https://i.ibb.co/Kz3FFfH/astronaut.png" alt="Floating Astronaut" class="astronaut">
+        <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Floating Astronaut" class="astronaut">
         <a href="/">Go Back to Earth</a>
     </div>
     <div class="star"></div>
@@ -136,4 +143,5 @@
     <div class="star"></div>
     <div class="star"></div>
 </body>
+
 </html>
