--- a/404.html
+++ b/404.html
@@ -135,7 +135,7 @@
     <div class="container">
         <h1>404</h1>
         <p>Oops! Looks like you’re lost in space.</p>
-        <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Floating Astronaut" class="astronaut">
+        <img src="/assets/images/404.png" alt="Floating Astronaut" class="astronaut">
         <a href="/">Go Back to Earth</a>
     </div>
     <div class="star"></div>
